changes in JS-Remoting

--- a/JavascriptRemotingController.cls
+++ b/JavascriptRemotingController.cls
@@ -2,8 +2,24 @@ public inherited sharing class JavascriptRemotingController {
     public JavascriptRemotingController() {
 
     }
-    public static string creatRecord(String fname, String lname, String email)
+    public static void creatRecord(String fname, String lname, String eml)
     {
-        return fname; 
+        System.debug('creatRecord');
+        List<Contact> contactList = new List<Contact>();
+        for (Contact inputContact : contactList) {
+            contact con = new contact();
+            con.FirstName = fname;
+            con.LastName = lname; 
+            con.Email = eml;
+            contactList.add(con);
+            
+        }
+        
+        insert contactList;
+
+
+       
+
+
     }
 }
