--- a/JavascriptRemotingController.cls
+++ b/JavascriptRemotingController.cls
@@ -1,16 +1,18 @@
 global with sharing class JavascriptRemotingController {
+   
 	@RemoteAction
     global Static Account AccountName(String fname)
     {
-        System.debug('getAccount');
+        System.debug('account method in controller');
         Account acc = new Account();
         acc.name = fname;
+       
         try {
             insert acc;
             return acc;
         } catch (Exception exp) {
-            System.debug('Error: ' +exp);
-            return null ; 
+            System.debug('Error:' + exp);
+            return null; 
             
         }
 
