account has been made with error handling

--- a/JavascriptRemotingController.cls
+++ b/JavascriptRemotingController.cls
@@ -1,16 +1,18 @@
 global with sharing class JavascriptRemotingController {
    
 	@RemoteAction
-    global Static Account AccountName(String fname)
+    global Static Account AccountName(String fname) // parameter passed form the VF page.
     {
         System.debug('account method in controller');
-        Account acc = new Account();
-        acc.name = fname;
+        Account acc = new Account(); // create an object for Account
+        acc.name = fname; //assign the account name to fname(parameter)
        
+       // TRY-CATCH for the exeption handling
         try {
-            insert acc;
-            return acc;
-        } catch (Exception exp) {
+            insert acc; // inserting the object to the org, saving the record on the org.
+            return acc; // return statement due to method of type Account.
+        } catch (Exception exp)
+         {
             System.debug('Error:' + exp);
             return null; 
             
